Add demo navbar, disable clock from api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,12 @@
 
 <div class="container" >
 
-<app-navbar></app-navbar>
+<app-navbar class="bar"></app-navbar>
 
   <!-- Resources -->
   <h2>Test Clock</h2>
 <!--<div *ngFor="let clock of clock$">-->
 <!--  <h1>aaa{{clock.second}}</h1>-->
 <!--</div>-->
-  <h2>Godziny: {{clock$.Hour}} Minuty:{{clock$.Minute}} Sekundy:{{clock$.Second}} </h2>
+ <!-- <h2>Godziny: {{clock$.Hour}} Minuty:{{clock$.Minute}} Sekundy:{{clock$.Second}} </h2>-->
 </div>
