--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,2 +1,12 @@
-<p>navbar works!</p>
-<div ></div>
+<nav class="NavBar">
+  <a class="navbar-item">
+    <img [src]=$logo alt="logo">
+  </a>
+<ul class="navigation">
+  <li><a class="navbar-item" href="#">Strona Główna</a></li>
+  <li><a class="navbar-item" href="#">Historia</a></li>
+  <li><a class="navbar-item" href="#">Informacje</a></li>
+  <li><a  class="navbar-item" href="#">Wyloguj</a></li>
+</ul>
+</nav>
+
