--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,9 @@
 .container {
-  grid-template-columns: 40px 50px auto 50px 40px;
-  grid-template-rows: 25% 100px auto;
-// -host
-}
 
+}
+.bar{
+  display: flex;
+  flex-direction:column;
+  flex-grow: 2;
+  background: cadetblue;
+}
