Add dashboard component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,10 @@
 <div class="container" >
 
 <app-navbar class="bar"></app-navbar>
+<app-dashboard></app-dashboard>
 
   <!-- Resources -->
-  <h2>Test Clock</h2>
+  <!-- <h2>Test Clock</h2> -->
 <!--<div *ngFor="let clock of clock$">-->
 <!--  <h1>aaa{{clock.second}}</h1>-->
 <!--</div>-->
