--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,16 +1,15 @@
-  .flex-container {
+    .flex-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(265px, 1fr)); /* Where the magic happens */
-    grid-auto-rows: 94px;
+    grid-template-columns: repeat(auto-fit, minmax(265px, 1fr));
+    grid-auto-rows: 194px;
     grid-gap: 20px;
     margin: 20px;
   }
-  
+
   .balance {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 20px;
     background-color: #DEDEDE;
     border-radius: 15px;
   }
@@ -19,8 +18,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    padding: 20px;
+    justify-content: space-around;
     background-color: #DEDEDE;
     border-radius: 15px;
   }
@@ -29,8 +27,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    padding: 20px;
+    justify-content: space-around;
     background-color: #DEDEDE;
     border-radius: 15px;
+    
   }
