--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,15 @@
+<head>
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  </head>
+
 <nav class="NavBar">
-  <a class="navbar-item">
-    <img [src]=$logo alt="logo">
-  </a>
+<!--    <img [src]=$logo alt="logo">-->
 <ul class="navigation">
-  <li><a class="navbar-item" href="#">Strona Główna</a></li>
-  <li><a class="navbar-item" href="#">Historia</a></li>
-  <li><a class="navbar-item" href="#">Informacje</a></li>
-  <li><a  class="navbar-item" href="#">Wyloguj</a></li>
+  <li class="navbar-item"><a class="nav-link" href="#"><i class="material-icons" style="font-size:70px;">home</i><span class="link-text"> Strona Główna</span></a></li>
+  <li class="navbar-item"><a class="nav-link" href="#"><i class="material-icons" style="font-size:70px; ">calendar_today</i><span class="link-text">Historia</span></a></li>
+  <li class="navbar-item"><a class="nav-link" href="#"><i class="material-icons" style="font-size:70px;">contact_support</i><span class="link-text">Informacje</span></a></li>
+  <li class="navbar-item"><a class="nav-link" href="#"><i class="material-icons" style="font-size:70px;">power_settings_new</i><span class="link-text">Wyloguj</span></a></li>
 </ul>
 </nav>
 
