Add image into buttons.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,7 @@
+<head>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+</head>
+
 <div class="flex-container">
   <div class="balance">
     <div>Wykres</div>
@@ -8,10 +12,14 @@
 <div class="flex-container">
   <div class="startRegistration">
     <div>Rozpocznij rejetrowanie pracy</div>
-    <button>Start</button>
+    <button class="ClockInButton">
+      <i class="material-icons" style="font-size:70px;">access_time</i>
+    </button>
   </div>
   <div class="stopRegistration">
     <div>Zakończ rejetrowanie pracy</div>
-   <button>Stop</button>
+   <button class="ClockOutButton">
+     <i class="material-icons" style="font-size:70px;">access_time</i>
+    </button>
   </div>
 </div>
