--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -30,5 +30,15 @@
     justify-content: space-around;
     background-color: #DEDEDE;
     border-radius: 15px;
-    
+  }
+  .ClockInButton{
+    background-color: green;
+    padding: 15px;
+    border-radius: 15px;
+  }
+  .ClockOutButton{
+    background-color: red;
+    padding: 15px;
+    border-radius: 15px;
+
   }
