--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,8 @@
 <head>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+  />
 </head>
 
 <div class="flex-container">
@@ -13,13 +16,13 @@
   <div class="startRegistration">
     <div>Rozpocznij rejetrowanie pracy</div>
     <button class="ClockInButton">
-      <i class="material-icons" style="font-size:70px;">access_time</i>
+      <i class="material-icons" style="font-size: 70px;">access_time</i>
     </button>
   </div>
   <div class="stopRegistration">
     <div>Zakończ rejetrowanie pracy</div>
-   <button class="ClockOutButton">
-     <i class="material-icons" style="font-size:70px;">access_time</i>
+    <button class="ClockOutButton">
+      <i class="material-icons" style="font-size: 70px;">access_time</i>
     </button>
   </div>
 </div>
