--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,44 +1,43 @@
-    .flex-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(265px, 1fr));
-    grid-auto-rows: 194px;
-    grid-gap: 20px;
-    margin: 20px;
-  }
+.flex-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(265px, 1fr));
+  grid-auto-rows: 194px;
+  grid-gap: 20px;
+  margin: 20px;
+}
 
-  .balance {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    background-color: #DEDEDE;
-    border-radius: 15px;
-  }
+.balance {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #dedede;
+  border-radius: 15px;
+}
 
-  .startRegistration {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    background-color: #DEDEDE;
-    border-radius: 15px;
-  }
+.startRegistration {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #dedede;
+  border-radius: 15px;
+}
 
-  .stopRegistration {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    background-color: #DEDEDE;
-    border-radius: 15px;
-  }
-  .ClockInButton{
-    background-color: green;
-    padding: 15px;
-    border-radius: 15px;
-  }
-  .ClockOutButton{
-    background-color: red;
-    padding: 15px;
-    border-radius: 15px;
-
-  }
+.stopRegistration {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #dedede;
+  border-radius: 15px;
+}
+.ClockInButton {
+  background-color: green;
+  padding: 15px;
+  border-radius: 15px;
+}
+.ClockOutButton {
+  background-color: red;
+  padding: 15px;
+  border-radius: 15px;
+}
