Replace px unit with rem unit.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -16,13 +16,13 @@
   <div class="startRegistration">
     <div>Rozpocznij rejetrowanie pracy</div>
     <button class="ClockInButton">
-      <i class="material-icons" style="font-size: 70px;">access_time</i>
+      <i class="material-icons" style="font-size: 5rem;">access_time</i>
     </button>
   </div>
   <div class="stopRegistration">
     <div>Zakończ rejetrowanie pracy</div>
     <button class="ClockOutButton">
-      <i class="material-icons" style="font-size: 70px;">access_time</i>
+      <i class="material-icons" style="font-size: 5rem;">access_time</i>
     </button>
   </div>
 </div>
