--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,9 +1,9 @@
 .flex-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(265px, 1fr));
-  grid-auto-rows: 194px;
-  grid-gap: 20px;
-  margin: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-auto-rows: 15rem;
+  grid-gap: 1rem;
+  margin: 1rem;
 }
 
 .balance {
@@ -11,7 +11,7 @@
   align-items: center;
   justify-content: space-around;
   background-color: #dedede;
-  border-radius: 15px;
+  border-radius: 1rem;
 }
 
 .startRegistration {
@@ -20,7 +20,7 @@
   align-items: center;
   justify-content: space-around;
   background-color: #dedede;
-  border-radius: 15px;
+  border-radius: 1rem;
 }
 
 .stopRegistration {
@@ -29,15 +29,15 @@
   align-items: center;
   justify-content: space-around;
   background-color: #dedede;
-  border-radius: 15px;
+  border-radius: 1rem;
 }
 .ClockInButton {
   background-color: green;
-  padding: 15px;
-  border-radius: 15px;
+  padding: 1rem;
+  border-radius: 1rem;
 }
 .ClockOutButton {
   background-color: red;
-  padding: 15px;
-  border-radius: 15px;
+  padding: 1rem;
+  border-radius: 1rem;
 }
