Change classes' names in css file, delete empty constructor, remove inline styles in html.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -13,16 +13,16 @@
 </div>
 
 <div class="flex-container">
-  <div class="startRegistration">
+  <div class="start-registration">
     <div>Rozpocznij rejetrowanie pracy</div>
-    <button class="ClockInButton">
-      <i class="material-icons" style="font-size: 5rem;">access_time</i>
+    <button class="clock-in-button">
+      <i class="material-icons">access_time</i>
     </button>
   </div>
-  <div class="stopRegistration">
+  <div class="stop-registration">
     <div>Zakończ rejetrowanie pracy</div>
-    <button class="ClockOutButton">
-      <i class="material-icons" style="font-size: 5rem;">access_time</i>
+    <button class="clock-out-button">
+      <i class="material-icons">access_time</i>
     </button>
   </div>
 </div>
