--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -14,7 +14,7 @@
   border-radius: 1rem;
 }
 
-.startRegistration {
+.start-registration {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,7 +23,7 @@
   border-radius: 1rem;
 }
 
-.stopRegistration {
+.stop-registration {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,13 +31,19 @@
   background-color: #dedede;
   border-radius: 1rem;
 }
-.ClockInButton {
+
+.clock-in-button {
   background-color: green;
   padding: 1rem;
   border-radius: 1rem;
 }
-.ClockOutButton {
+
+.clock-out-button {
   background-color: red;
   padding: 1rem;
   border-radius: 1rem;
+}
+
+.material-icons {
+  font-size: 5rem;
 }
