--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,4 @@
-
-
-<div class="container" >
-
-<app-navbar class="bar"></app-navbar>
-<app-dashboard></app-dashboard>
-
-  <!-- Resources -->
-  <!-- <h2>Test Clock</h2> -->
-<!--<div *ngFor="let clock of clock$">-->
-<!--  <h1>aaa{{clock.second}}</h1>-->
-<!--</div>-->
- <!-- <h2>Godziny: {{clock$.Hour}} Minuty:{{clock$.Minute}} Sekundy:{{clock$.Second}} </h2>-->
+<div class="container">
+    <app-navbar></app-navbar>
+    <app-dashboard></app-dashboard>
 </div>
