Code formatting, navigation bar now works correctly

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,70 +1,15 @@
-.NavBar {
+img {
+    display: flex;
+    justify-content: flex-start;
+}
 
+.navbar {
     height: 6rem;
     width: 100vw;
     position: fixed;
     flex-direction: row;
     background-color: #315F42;
     justify-content: flex-start;
-    transition: height 250ms ease;
-}
-
-.NavBar:hover {
-    height: 10rem;
-}
-
-.NavBar:hover .link-text {
-    display: flex;
-    flex-direction: column;
-}
-
-img {
-    display: flex;
-    justify-content: flex-start;
-}
-
-.nav-link i {
-
-    min-width: 2rem;
-    align-content: center;
-    align-items: center;
-    margin-left: 2rem;
-}
-
-
-.nav-link span {
-    margin-right: 4rem;
-}
-
-.nav-link {
-    text-align: center;
-    align-content: center;
-    align-items: center;
-    height: 4rem;
-    text-decoration: none;
-    justify-content: center;
-    display: flex;
-}
-
-.material-icons {
-    font-size: 70px;
-}
-
-.link-text {
-
-    align-items: center;
-    display: none;
-    margin-top: 10rem;
-}
-
-.navbar-item {
-    align-content: center;
-    height: 100%;
-    font-size: 20px;
-}
-
-.navbar-item:last-child {
-    margin-left: auto;
 }
 
 .navigation {
@@ -77,6 +22,7 @@ img {
     background: #315F42;
     height: 6rem;
     text-align: center;
+
 }
 
 .navigation a {
@@ -84,25 +30,57 @@ img {
     padding: 1rem;
     color: white;
     display: flex;
-    align-items: center;
-}
+    align-items: center
 
+}
 
 .navigation a:hover {
     background: #5F314E;
 }
 
-
-body {
-    color: black;
-    background-color: white;
-    margin: 0;
-    padding: 0;
+.navbar-item {
+    align-content: center;
+    height: 100%;
+    font-size: 20px;
+    transition: width 250ms ease;
 }
 
-main {
-    margin-top: 6rem;
-    padding: 1rem;
+.navbar-item:hover .link-text {
+    width: 10rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.navbar-item:last-child {
+    margin-left: auto;
+}
+
+.nav-link i {
+    min-width: 2rem;
+    align-content: center;
+    align-items: center;
+    margin-left: 2rem;
+
+}
+
+.nav-link {
+    text-align: center;
+    align-content: center;
+    align-items: center;
+    height: 4rem;
+    text-decoration: none;
+    justify-content: center;
+    display: flex;
+}
+
+.link-text {
+    align-items: center;
+    display: none;
+
+}
+
+.material-icons {
+    font-size: 70px;
 }
 
 @media only screen and (min-width: 600px) {
