--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,11 +2,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
-<nav class="NavBar">
+<nav class="navbar">
     <ul class="navigation">
         <li class="navbar-item" *ngFor="let element of this.navbarArry"><a class="nav-link" href='{{element.icon}}'><i
                 class="material-icons">{{element.icon}}</i><span
-                class="link-text">Informacje</span></a></li>
+                class="link-text">{{element.text}}</span></a></li>
     </ul>
 </nav>
 
