--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
 </head>
 <nav class="navbar">
     <ul class="navigation">
-        <li class="navbar-item" *ngFor="let element of this.navbarArry"><a class="nav-link" href='{{element.icon}}'><i
+        <li class="navbar-item" *ngFor="let element of this.navbarArray"><a class="nav-link" href='{{element.icon}}'><i
                 class="material-icons">{{element.icon}}</i><span
                 class="link-text">{{element.text}}</span></a></li>
     </ul>
