--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,9 @@
+:host{
+    display: flex;
+    flex-direction:column;
+    flex-grow: 2;
+    background: cadetblue;
+}
 img {
     display: flex;
     justify-content: flex-start;
@@ -39,8 +45,9 @@ img {
 }
 
 .navbar-item {
-    align-content: center;
     height: 100%;
+    align-content: center;
+
     font-size: 20px;
     transition: width 250ms ease;
 }
@@ -64,10 +71,11 @@ img {
 }
 
 .nav-link {
+    height: 100%;
     text-align: center;
     align-content: center;
     align-items: center;
-    height: 4rem;
+
     text-decoration: none;
     justify-content: center;
     display: flex;
