--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
 </head>
 <nav class="navbar">
     <ul class="navigation">
-        <li id="navbar-item" *ngFor="let element of this.navbarArray" class="navbar-item">
+        <li id="navbar-item" *ngFor="let element of this.navBarArray" class="navbar-item">
             <a class="nav-link" href='{{element.icon}}'>
                 <i class="material-icons">{{element.icon}}</i>
                 <span  id="link-text" class="link-text">{{element.text}}</span>
