ClockIn button now sending post to API

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
 <div class="flex-container">
   <div class="start-registration">
     <div>Rozpocznij rejetrowanie pracy</div>
-    <button class="clock-in-button">
+    <button (click)="ClockIn()" class="clock-in-button">
       <i class="material-icons">access_time</i>
     </button>
   </div>
