--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,15 +1,24 @@
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+    rel="stylesheet"
+  />
+  <link
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet"
+  />
 </head>
 <nav class="navbar">
-    <ul class="navigation">
-        <li id="navbar-item" *ngFor="let element of this.navBarArray" class="navbar-item">
-            <a class="nav-link" href='{{element.icon}}'>
-                <i class="material-icons">{{element.icon}}</i>
-                <span  id="link-text" class="link-text">{{element.text}}</span>
-            </a>
-        </li>
-    </ul>
+  <ul class="navigation">
+    <li
+      id="navbar-item"
+      *ngFor="let element of this.navBarArray"
+      class="navbar-item"
+    >
+      <a class="nav-link" href="{{ element.icon }}">
+        <i class="material-icons">{{ element.icon }}</i>
+        <span id="link-text" class="link-text">{{ element.text }}</span>
+      </a>
+    </li>
+  </ul>
 </nav>
-
