--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
   </div>
   <div class="stop-registration">
     <div>Zakończ rejetrowanie pracy</div>
-    <button class="clock-out-button">
+    <button (click)="ClockOut()" class="clock-out-button">
       <i class="material-icons">access_time</i>
     </button>
   </div>
