Methods name refactor

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -15,13 +15,13 @@
 <div class="flex-container">
   <div class="start-registration">
     <div>Rozpocznij rejetrowanie pracy</div>
-    <button (click)="ClockIn()" class="clock-in-button">
+    <button (click)="clockIn()" class="clock-in-button">
       <i class="material-icons">access_time</i>
     </button>
   </div>
   <div class="stop-registration">
     <div>Zakończ rejetrowanie pracy</div>
-    <button (click)="ClockOut()" class="clock-out-button">
+    <button (click)="clockOut()" class="clock-out-button">
       <i class="material-icons">access_time</i>
     </button>
   </div>
