ClockIn/Out request error handling with user information

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,11 +18,23 @@
     <button (click)="clockIn()" class="clock-in-button">
       <i class="material-icons">access_time</i>
     </button>
+    <ng-container
+      *ngIf="errorClockIn === null; else afterClockInErrorClick"
+    ></ng-container>
+    <ng-template #afterClockInErrorClick>
+      <p>Nie zarejestrować wejścia do pracy Error: {{ errorClockIn }}</p>
+    </ng-template>
   </div>
   <div class="stop-registration">
     <div>Zakończ rejetrowanie pracy</div>
     <button (click)="clockOut()" class="clock-out-button">
       <i class="material-icons">access_time</i>
     </button>
+    <ng-container
+      *ngIf="errorClockOut === null; else afterClockOutErrorClick"
+    ></ng-container>
+    <ng-template #afterClockOutErrorClick>
+      <p>Nie zarejestrować wyjścia z pracy Error: {{ errorClockOut }}</p>
+    </ng-template>
   </div>
 </div>
