--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,7 +8,12 @@
 <div class="flex-container">
   <div class="balance">
     <div>Wykres</div>
-    <div>info</div>
+    <div>
+      <p>Godziny Przepracowane: {{ balanceData.hoursWorked }}</p>
+      <p>Minuty Przepracowane:{{ balanceData.minutesWorked }}</p>
+      <p>Godziny Do Przepracowania:{{ balanceData.hoursLeft }}</p>
+      <p>Minuty Do Przepracowania:{{ balanceData.minutesLeft }}</p>
+    </div>
   </div>
 </div>
 
