Add donut-chart component.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,7 +7,9 @@
 
 <div class="flex-container">
   <div class="balance">
-    <div>Wykres</div>
+    <div>
+      <app-donut-chart></app-donut-chart>
+    </div>
     <div>info</div>
   </div>
 </div>
