--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
       wejścia do pracy
     </p>
 
-    <p *ngIf="errorClockIn === 200">
+    <p *ngIf="errorClockIn !== 200">
       Udało się pomyślnie zarejestrować wejście do pracy
     </p>
   </div>
@@ -44,7 +44,7 @@
       wyjścia z pracy
     </p>
 
-    <p *ngIf="errorClockOut === 200">
+    <p *ngIf="errorClockOut !== 200">
       Udało się pomyślnie zarejestrować wyjście z pracy
     </p>
   </div>
