--- a/src/app/donut-chart/donut-chart.component.html
+++ b/src/app/donut-chart/donut-chart.component.html
@@ -1,1 +1,13 @@
-<p>donut-chart works!</p>
+<svg height="20" width="20" viewBox="0 0 20 20">
+  <circle
+    r="5"
+    cx="10"
+    cy="10"
+    fill="transparent"
+    stroke="tomato"
+    stroke-width="10"
+    stroke-dasharray="calc(80 * 31.42 / 100) 31.42"
+    transform="rotate(-90) translate(-20)"
+  />
+  <circle r="7" cx="10" cy="10" fill="white" />
+</svg>
