--- a/src/app/donut-chart/donut-chart.component.css
+++ b/src/app/donut-chart/donut-chart.component.css
@@ -2,3 +2,23 @@ svg {
   height: 12rem;
   width: 12rem;
 }
+
+.donut-percent {
+  font-size: 0.5em;
+  line-height: 1;
+  transform: translateY(0.5em);
+  font-weight: bold;
+}
+
+.donut-data {
+  font-size: 0.12em;
+  text-align: center;
+  text-anchor: middle;
+}
+.donut-text {
+  font-size: 0.75rem;
+  fill: #ff6200;
+}
+.donut-text-1 {
+  fill: black;
+}
