--- a/src/app/donut-chart/donut-chart.component.html
+++ b/src/app/donut-chart/donut-chart.component.html
@@ -1,13 +1,25 @@
 <svg height="20" width="20" viewBox="0 0 20 20">
+  <circle r="10" cx="10" cy="10" fill="white" />
   <circle
     r="5"
     cx="10"
     cy="10"
     fill="transparent"
-    stroke="tomato"
+    stroke="coral"
     stroke-width="10"
-    stroke-dasharray="calc(80 * 31.42 / 100) 31.42"
+    stroke-dasharray="calc(40 * 31.42 / 100) 31.42"
     transform="rotate(-90) translate(-20)"
   />
-  <circle r="7" cx="10" cy="10" fill="white" />
+  <circle r="7" cx="10" cy="10" fill="#dedede" />
+
+  <g class="donut-text donut-text-1">
+    <text y="50%" transform="translate(0, 2)">
+      <tspan x="50%" text-anchor="middle" class="donut-percent">40%</tspan>
+    </text>
+    <text y="60%" transform="translate(0, 2)">
+      <tspan x="50%" class="donut-data">
+        70 / 160h
+      </tspan>
+    </text>
+  </g>
 </svg>
