--- a/src/app/clock-in-out-history/clock-in-out-history.component.css
+++ b/src/app/clock-in-out-history/clock-in-out-history.component.css
@@ -1,7 +1,7 @@
 .flex-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  grid-auto-rows: 15rem;
+  grid-auto-rows: 50rem;
   grid-gap: 1rem;
   margin: 1rem;
   font-family: Lato;
@@ -12,13 +12,19 @@
   align-items: center;
   justify-content: space-around;
   background-color: #dedede;
-  border-radius: 1rem;
+  border-radius: 100rem;
 }
 li {
   background-color: #b3b1af;
-  margin: 0.5rem;
+  font-size: 1.5rem;
+  margin: 0.9rem;
   list-style: none;
 }
 .odd-li {
   background-color: aliceblue;
+}
+ul {
+  width: 70%;
+  overflow: hidden;
+  overflow-y: scroll;
 }
