--- a/src/app/donut-chart/donut-chart.component.html
+++ b/src/app/donut-chart/donut-chart.component.html
@@ -14,12 +14,12 @@
 
   <g class="donut-text donut-text-1">
     <text y="50%" transform="translate(0, 2)">
-      <tspan x="50%" text-anchor="middle" class="donut-percent">40%</tspan>
+      <tspan x="50%" text-anchor="middle" class="donut-percent">
+        {{ this.workedPercent }}%
+      </tspan>
     </text>
     <text y="60%" transform="translate(0, 2)">
-      <tspan x="50%" class="donut-data">
-        70 / 160h
-      </tspan>
+      <tspan x="50%" class="donut-data">{{ this.workedPercent }}h</tspan>
     </text>
   </g>
 </svg>
