Change in donut.

--- a/src/app/donut-chart/donut-chart.component.html
+++ b/src/app/donut-chart/donut-chart.component.html
@@ -7,7 +7,7 @@
     fill="transparent"
     stroke="coral"
     stroke-width="10"
-    stroke-dasharray="calc(40 * 31.42 / 100) 31.42"
+    attr.stroke-dasharray="calc({{ this.workedPercent }} * 31.42 / 100) 31.42"
     transform="rotate(-90) translate(-20)"
   />
   <circle r="7" cx="10" cy="10" fill="#dedede" />
