--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <app-navbar></app-navbar>
   <div class="board">
-    <!--    <app-dashboard></app-dashboard>-->
-    <app-clock-in-out-history></app-clock-in-out-history>
+        <app-dashboard></app-dashboard>
+<!--    <app-clock-in-out-history></app-clock-in-out-history>-->
   </div>
 </div>
