--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <app-navbar></app-navbar>
-  <div class="board">
+  <!-- <div class="board">
     <app-dashboard></app-dashboard>
-  </div>
+  </div> -->
 </div>
+<router-outlet></router-outlet>
