--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,3 +1,7 @@
+.board {
+  margin-top: 6rem;
+}
+
 .flex-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
