Chane odd-li class background color

--- a/src/app/clock-in-out-history/clock-in-out-history.component.css
+++ b/src/app/clock-in-out-history/clock-in-out-history.component.css
@@ -22,7 +22,7 @@ li {
   letter-spacing: 0.5rem;
 }
 .odd-li {
-  background-color: aliceblue;
+  background-color: #dee3e0;
 }
 ul {
   margin-left: auto;
