Add page-not-found component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="container">
   <app-navbar></app-navbar>
 </div>
-<router-outlet></router-outlet>
+<div class="board">
+  <router-outlet></router-outlet>
+</div>
