--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,7 +15,7 @@
       *ngFor="let element of this.navBarArray"
       class="navbar-item"
     >
-      <a class="nav-link" href="{{ element.icon }}">
+      <a class="nav-link" routerLink="{{ element.link }}">
         <i class="material-icons">{{ element.icon }}</i>
         <span id="link-text" class="link-text">{{ element.text }}</span>
       </a>
