--- a/src/app/clock-in-out-history/clock-in-out-history.component.css
+++ b/src/app/clock-in-out-history/clock-in-out-history.component.css
@@ -4,7 +4,6 @@
   grid-auto-rows: 50rem;
   grid-gap: 1rem;
   margin: 1rem;
-  font-family: Lato;
 }
 .history-container {
   display: flex;
@@ -28,4 +27,19 @@ ul {
   margin-left: auto;
   margin-right: auto;
   overflow-y: auto;
+}
+@media (min-width: 320px) {
+  li {
+    font-size: 1rem;
+  }
+}
+@media (min-width: 768px) {
+  li {
+    font-size: 1.3rem;
+  }
+}
+@media (min-width: 992px) {
+  li {
+    font-size: 1.5rem;
+  }
 }
