--- a/src/app/clock-in-out-history/clock-in-out-history.component.css
+++ b/src/app/clock-in-out-history/clock-in-out-history.component.css
@@ -1,6 +1,6 @@
 .flex-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(0rem, 1fr));
   grid-auto-rows: 50rem;
   grid-gap: 1rem;
   margin: 1rem;
@@ -24,13 +24,14 @@ li {
   background-color: #dee3e0;
 }
 ul {
+  padding-inline-start: 0;
   margin-left: auto;
   margin-right: auto;
   overflow-y: auto;
 }
 @media (min-width: 320px) {
   li {
-    font-size: 1rem;
+    font-size: 0.825rem;
   }
 }
 @media (min-width: 768px) {
