--- a/src/app/donut-chart/donut-chart.component.css
+++ b/src/app/donut-chart/donut-chart.component.css
@@ -16,3 +16,21 @@ svg {
   text-align: center;
   text-anchor: middle;
 }
+@media only screen and (min-width: 320px) {
+  svg {
+    height: 8rem;
+    width: 8rem;
+  }
+}
+@media only screen and (min-width: 768px) {
+  svg {
+    height: 10rem;
+    width: 10rem;
+  }
+}
+@media only screen and (min-width: 992px) {
+  svg {
+    height: 12rem;
+    width: 12rem;
+  }
+}
