--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -82,14 +82,26 @@ i {
 
 .material-icons {
   margin: 0;
-  font-size: 70px;
+  font-size: 5rem;
 }
 
-@media only screen and (min-width: 576px) {
+@media only screen and (min-width: 320px) {
+  .material-icons {
+    margin: 0;
+    font-size: 3rem;
+  }
 }
 @media only screen and (min-width: 768px) {
+  .material-icons {
+    margin: 0;
+    font-size: 4rem;
+  }
 }
 @media only screen and (min-width: 992px) {
+  .material-icons {
+    margin: 0;
+    font-size: 5rem;
+  }
   .navbar-item:hover {
     width: 15rem;
     display: flex;
