Show time when user click ClockIn and stop it when user click ClockOut.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
       <app-donut-chart></app-donut-chart>
     </div>
     <div>
-      <!-- {{ this.dateClockIn }} -->
+      {{ this.timer }}
     </div>
     <div>
       <h2>Aktualny bilans</h2>
