--- a/src/app/clock-in-out-history/clock-in-out-history.component.css
+++ b/src/app/clock-in-out-history/clock-in-out-history.component.css
@@ -7,11 +7,15 @@
 }
 .history-container {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: space-around;
   background-color: #dedede;
   border-radius: 5rem;
+}
+.history {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 li {
   background-color: #b3b1af;
