--- a/src/app/clock-in-out-history/clock-in-out-history.component.css
+++ b/src/app/clock-in-out-history/clock-in-out-history.component.css
@@ -6,6 +6,7 @@
   margin: 1rem;
 }
 .history-container {
+  margin: auto;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -16,13 +17,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-y: auto;
 }
 li {
   background-color: #b3b1af;
   font-size: 0.825rem;
   margin: 0.8125rem;
   list-style: none;
-  letter-spacing: 0.5rem;
 }
 .odd-li {
   background-color: #dee3e0;
@@ -31,20 +32,23 @@ ul {
   padding-inline-start: 0;
   margin-left: auto;
   margin-right: auto;
-  overflow-y: auto;
+  letter-spacing: 0.125rem;
 }
 @media (min-width: 320px) {
   li {
     font-size: 0.825rem;
+    letter-spacing: 0.125rem;
   }
 }
 @media (min-width: 768px) {
   li {
     font-size: 1rem;
+    letter-spacing: 0.125rem;
   }
 }
 @media (min-width: 992px) {
   li {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
+    letter-spacing: 0.25rem;
   }
 }
