Delete errors from console.

--- a/src/app/donut-chart/donut-chart.component.html
+++ b/src/app/donut-chart/donut-chart.component.html
@@ -20,7 +20,7 @@
     </text>
     <text y="60%" transform="translate(0, 2)">
       <tspan x="50%" class="donut-text-data">
-        {{ this.balanceData.hoursWorked }}/ {{ this.hoursToWorkInMonth }}h
+        {{ this.balanceData?.hoursWorked }}/ {{ this?.hoursToWorkInMonth }}h
       </tspan>
     </text>
   </g>
