--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,13 +10,12 @@
       <app-donut-chart></app-donut-chart>
     </div>
     <div>
-
       <h3>Aktualny bilans</h3>
-      <h4 class="balance-on-plus" *ngIf="balanceData.hoursLeft < 0">
+      <h4 class="balance-on-plus" *ngIf="balanceData?.hoursLeft < 0">
         + {{ balanceData.hoursLeft | makePositive }}h
         {{ balanceData.minutesLeft | makePositive }}min
       </h4>
-      <h4 class="balance-on-minus" *ngIf="balanceData.hoursLeft > 0">
+      <h4 class="balance-on-minus" *ngIf="balanceData?.hoursLeft > 0">
         - {{ balanceData.hoursLeft }}h {{ balanceData.minutesLeft }}min
       </h4>
     </div>
